--- a/client/staff.jade
+++ b/client/staff.jade
@@ -85,7 +85,7 @@ template(name='shift_change_requests')
         i.large.icons
             i.clock.icon
             i.plus.corner.icon
-    table.ui.celled.table
+    table.ui.celled.fixed.unstackable.table
         thead
             tr
                 th date
