--- a/components/delta/model.jade
+++ b/components/delta/model.jade
@@ -6,7 +6,7 @@ template(name='model_edit')
                     .ui.header(title="model: #{model}")
                         |#{title}
                     +creation_info
-                    h1.ui.header Edit Model
+                    h1.ui.header edit model
                     .ui.form
                         +text_edit key='title' label='Title' direct=true
                         +text_edit key='slug' label='Slug' direct=true
@@ -21,11 +21,11 @@ template(name='model_edit')
                         #delete_model.ui.icon.circular.basic.button
                             i.trash.icon
                 .ten.wide.column
-                    //- |#{type}
+                    //- |#{model}
                     //- each fields
                     //-     +Template.dynamic template=edit_template 
                     //-     // .ui.header #{key} [#{field}] #{label}
-                    .ui.inline.header Fields
+                    .ui.inline.header fields
                     .ui.icon.circular.basic.large.button.add_field
                         i.plus.green.icon
                     each fields
@@ -50,7 +50,7 @@ template(name='model_view')
                             if title
                                 |#{title}
                             else
-                                | View #{type}
+                                | View #{model}
             .row
                 .four.wide.column
                     // .ui.header
@@ -60,7 +60,7 @@ template(name='model_view')
                     if can_edit
                         a.ui.fluid.button(href="/m/#{model}/#{_id}/edit")
                             i.pencil.icon
-                            |Edit
+                            |edit
                     each model.actions
                         +Template.dynamic template=this data=current_doc
                     +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
