--- a/client/fields.jade
+++ b/client/fields.jade
@@ -703,7 +703,7 @@ template(name='multi_doc_edit')
     .ui.small.inline.grey.header(title=key)
         if icon
             i.icon(class=icon)
-        |#{title} #{label}
+        |#{title} #{label}    
     each choices
         .ui.circular.compact.button.select_choice(class=choice_class)
             if icon
@@ -747,12 +747,12 @@ template(name='multi_doc_view')
 
 template(name='single_user_edit')
     div
-    .ui.inline.header 
+    .ui.inline.small.grey.header 
         if icon
             i.icon(class=icon)
         |#{title}
     if field_value
-        .pull_user.ui.circular.basic.button(title='Remove User')
+        .pull_user.ui.circular.basic.button(title='remove user')
             i.user.remove.icon
             |clear #{field_value}
     unless field_value
@@ -768,7 +768,7 @@ template(name='single_user_edit')
                         .select_user.item
                             h4.ui.header
                                 img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
-                                |#{username}
+                                |#{first_name} #{last_name} #{username}
     if field_value
         +big_user_card field_value
         //- |#{this}
@@ -844,7 +844,7 @@ template(name='single_person_edit')
 template(name='multi_user_edit')
     .ui.segment
         .ui.form
-            .ui.small.header
+            .ui.small.inline.grey.header
                 if icon
                     i.grey.icon(class=icon)
                 if title
@@ -855,7 +855,7 @@ template(name='multi_user_edit')
                     |#{key}
                 else
                     |#{this}
-                input#multi_user_select_input(type='text' placeholder='Lookup User...')
+                input#multi_user_select_input(type='text' placeholder='lookup user...')
                 each selections
                     .ui.large.label
                         |#{username} #{first_name} #{last_name}
@@ -866,22 +866,33 @@ template(name='multi_user_edit')
                             .select_user.item
                                 h5.ui.header
                                     img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
-                                    |#{username}
+                                    strong #{first_name} #{last_name}
+                                    small #{username}
+            +clear_value                
             .ui.list
                 each field_value
                     // |#{this}
                     +big_user_card
-                    with user_from_id
-                        .item
-                            .right.floated.content
-                                i.pull_user.remove.link.icon
-                            .image
-                                img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
-                            .content
-                                h4.ui.header
-                                    |#{first_name} #{last_name}
-                                    small @#{username}
+                    //- with user_from_id
+                    //-     .item
+                    //-         .right.floated.content
+                    //-             i.pull_user.remove.link.icon
+                    //-         .image
+                    //-             img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
+                    //-         .content
+                    //-             h4.ui.header
+                    //-                 |#{first_name} #{last_name}
+                    //-                 small @#{username}
     
-    
+template(name='multi_user_view')
+    .ui.small.header 
+        |#{title}
+        //- #{key} #{label}
+    each field_value
+        .ui.stackable.cards
+            +big_user_card
+            
+
+
     
     
