--- a/client/profile.jade
+++ b/client/profile.jade
@@ -38,15 +38,15 @@ template(name='profile')
                         each roles
                             .ui.circular.basic.label #{this}                    
                     if is_admin
-                        a.ui.circular.fluid.basic.button(href="/user/#{user_from_username_param.username}/edit")
+                        a.ui.circular.fluid.button(href="/user/#{user_from_username_param.username}/edit")
                             i.settings.icon
                             | settings
                     else if current_user
-                        a.ui.circular.fluid.basic.button(href="/user/#{user_from_username_param.username}/edit")
+                        a.ui.circular.fluid.button(href="/user/#{user_from_username_param.username}/edit")
                             i.settings.icon
                             | settings
                     if current_user
-                        .ui.circular.fluid.basic.button.logout
+                        .ui.circular.fluid.button.logout
                             i.sign.out.icon
                             |log out
                     if user_is_resident
@@ -134,6 +134,14 @@ template(name='user_guests')
         .ui.grey.inline.center.aligned.header 
             i.id.card.alternate.icon
             |guests
+        +goto_model slug='guest'
+        .ui.link.large.list
+            each guests
+                a.item(href="/m/guest/#{_id}/view")
+                    img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
+                    .content
+                        |#{first_name} #{last_name} #{username}
+
             
             
 template(name='user_key')
@@ -141,10 +149,13 @@ template(name='user_key')
         .ui.grey.inline.center.aligned.header 
             i.key.icon
             |key
+        if is_admin
+            +goto_model slug='key'
+    
         with key
             if is_admin
                 +number_view key='tag_number' label='Tag Number' direct=true
-            if is_staff
+            else if is_staff
                 +number_view key='tag_number' label='Tag Number' direct=true
             +boolean_view key='fowler' label='Fowler' direct=true
             +boolean_view key='key_exists' label='Key Exists' direct=true
@@ -160,6 +171,7 @@ template(name='user_unit')
         .ui.grey.inline.center.aligned.header 
             i.home.icon
             |unit
+        +goto_model slug='unit'
         with unit
             +number_view key='building_number' label='Building Number' direct=true
             +number_view key='unit_number' label='Unit #' direct=true
@@ -181,6 +193,8 @@ template(name='violations')
         .ui.grey.inline.center.aligned.header 
             i.exclamation.triangle.icon
             |violations
+        +goto_model slug='violation'
+
         //- .ui.list
         //-     each violations
         //-         .item
@@ -212,12 +226,13 @@ template(name='user_log')
         .ui.grey.inline.center.aligned.header 
             i.feed.icon
             |log
-        .ui.list
-            each user_log_events
-                .item
-                    .content
-                        .header #{body}
-                        .description #{when}
+        .smallscroll
+            .ui.list
+                each user_log_events
+                    .item
+                        .content
+                            .header #{body}
+                            .description #{when}
 
 
 template(name='user_rules_widget')
@@ -280,6 +295,7 @@ template(name='user_tasks')
         .ui.grey.inline.center.aligned.header 
             i.tasks.icon
             |tasks
+        +goto_model slug='task'
         .ui.icon.input
             i.plus.icon
             input.assign_task(type='text' placeholder='assign task...')
@@ -311,7 +327,7 @@ template(name='role_switcher')
     .ui.fluid.styled.accordion.profile_block
         .active.title
             .ui.grey.inline.center.aligned.header 
-                i.user.shield.icon(title='Role Switcher')
+                i.user.shield.icon(title='role switcher')
                 |roles
         .active.content
             //- if is_eric
