--- a/client/profile/user_edit.jade
+++ b/client/profile/user_edit.jade
@@ -30,12 +30,23 @@ template(name='user_edit')
                             +number_edit key='building_number' label='building #' direct=true
                             +text_edit key='building_code' label='building code' direct=true
                             +date_edit key='start_date' label='start date' direct=true
-                            +date_edit key='expiration_date' label='expiration date' direct=true
+                            unless user_is_owner
+                                +date_edit key='expiration_date' label='expiration date' direct=true
                             +image_edit key='lease_agreement_image' label='lease agreement image' direct=true
                         //- +text_edit key='email' label='Email' direct=true
                         +phone_edit key='phone' label='phone' direct=true
                         //- +image_edit key='banner_image_id' label='Banner Image' direct=true
                 .column
+                    if is_staff
+                        //- with user_from_username_param
+                        +boolean_edit key='government_id_checked' label='government id checked' direct=true
+                        +single_user_edit key='id_checked_by_staff' label='government id checked by' role_filter='staff' direct=true
+                        +date_edit key='id_checked_date' label='government id checked date' direct=true
+                    else
+                        +boolean_view key='government_id_checked' label='government id checked' direct=true
+                        +single_user_view key='id_checked_by_staff' label='government id checked by' role_filter='staff' direct=true
+                        +date_view key='id_checked_date' label='government id checked date' direct=true
+                        //- with user_from_username_param
                     //- +array_edit key='tags' label='tags' direct=true
                     //- +text_edit key='spirit_animal' label='spirit animal' direct=true
                     //- +boolean_edit key='published' label='profile published'
