--- a/client/nav.jade
+++ b/client/nav.jade
@@ -120,13 +120,13 @@ template(name='sidebar')
 
 
 template(name='footer')
-    .ui.fluid.grblue.attached.segment.footer
+    .ui.fluid.secondary.attached.segment.footer
         .ui.container.grid
             .twelve.wide.column
-                +health_club_info    
+                //- +health_club_info    
             .four.wide.column
                 +role_switcher
         .row
             .ui.center.aligned.header
                 i.creative.commons.icon
-                |Gold Run
+                |gold run
