--- a/client/client.jade
+++ b/client/client.jade
@@ -3,18 +3,18 @@ head
     meta(name='viewport', content='user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width')
     meta(name='apple-mobile-web-app-capable', content='yes')
     meta(name='apple-mobile-web-app-status-bar-style', content='black')
-    script(src='https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js')
-    script(src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js")
+    meta(name="msapplication-TileColor" content="#000000")
+    meta(name="theme-color" content="#000000")
     link(rel='stylesheet' type='text/css' href='https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.4/dist/semantic.min.css')
-    script(src='https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.4/dist/semantic.min.js')
     link(href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet")
     link(rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png")
     link(rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png")
     link(rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png")
     link(rel="manifest" href="/site.webmanifest")
     link(rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000")
-    meta(name="msapplication-TileColor" content="#000000")
-    meta(name="theme-color" content="#000000")
+    script(src='https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js')
+    script(src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js")
+    script(src='https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.4/dist/semantic.min.js')
 
 
 template(name='layout')
@@ -24,13 +24,12 @@ template(name='layout')
         +nav
     .ui.stackable.padded.grid
         .centered.row
-            if displaying_profile
-                .twelve.wide.column
+            .sixteen.wide.column
+                if displaying_profile
                     +big_checkin_card displaying_profile
-                //- #main
-            else 
-                .sixteen.wide.column
+                else 
                     +yield
+        +footer
     
     //- .context
     //-     +nav
@@ -41,7 +40,6 @@ template(name='layout')
     //-                 //- .ui.basic.fluid.segment
     //-                 +yield
         //- +footer
-    //- +footer
 
 
 
