--- a/client/home.jade
+++ b/client/home.jade
@@ -1,6 +1,8 @@
 template(name='home')
     h1.ui.center.aligned.grey.header 
-        |gold run
+        each currentUser.roles
+            strong #{this} &nbsp;
+        |portal
     .ui.stackable.four.column.grid
         each role_models
             .column
