--- a/client/styles.css
+++ b/client/styles.css
@@ -4,7 +4,7 @@ body {
     font-size: 110% !important;
     /*line-height: 200% !important;*/
     /*background: #3d3d3d !important;*/
-    /* background: rgba(0, 0, 0, 1) !important */
+    background: rgba(0, 0, 0, .02) !important
     /* background: #0e0e44 !important; */
 }
 
@@ -37,9 +37,9 @@ input{
 
 .profile_block {
     margin-bottom: 20px !important;
-    -webkit-border-radius: 15px !important;
-    -moz-border-radius: 15px !important;
-    border-radius: 15px !important;
+    -webkit-border-radius: 10px !important;
+    -moz-border-radius: 10px !important;
+    border-radius: 10px !important;
     box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.1) !important;
     opacity: .9;
 }
